# underpass

./: .clang-format  .dockerignore  .gitignore  .underpass  404.html  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac  docker-compose.yml  dsodefs.hh  githook-code-formatter.sh  hotosm.cc  hotosm.h  hotosm.hh  hottm.cc  hottm.hh  index.html  log.cc  log.hh  mkdocs.yml  replicator.cc  replicatorconfig.hh  sitemap.xml  stamp-h1  t.cc  timer.hh  tt.cc  unconfig.h.in
.circleci/: config.yml
.github/: labeler.yml
.github/workflows/: build.yaml  build.yml  build_ci_img.yml  ci.yml  docker_image.yml  dockerfile.yml  docs.yml  gh-pages.yml  main.yml  pr_test.yml  release_img.yaml  release_img.yml  run_tests.yml  tests.yaml  tests.yml  tets.yaml  wiki.yaml  wiki.yml
API/Python/: index.html
API/PythonDB/: index.html
API/REST/: index.html
Dev/bootstrapsh/: index.html
ci/: README.md  ci_local.sh  create_underpass_db.sql
config/: default.yaml  pokhara-priority.geojson  priority.geojson
data/: clean-osmchanges.sql  galaxy.sql  geoboundaries.osm  geoboundaries.sql  geoutil.cc  geoutil.hh  import.cc  import.hh  osm2pgsql.cc  osm2pgsql.hh  osm2pgsql.sql  osmobjects.cc  osmobjects.hh  osmstats.sql  pgsnapshot.cc  pgsnapshot.hh  pgsnapshot.sql  pq.cc  pq.hh  priority.geojson  python.cc  setupdb.sh  states.sql  states.sql.bz2  statsconfig.cc  statsconfig.hh  test.py  threads.cc  threads.hh  underpass.cc  underpass.hh  underpass.sql  updated_geoboundaries.sql  validate.cc  validate.hh  yaml.cc  yaml.hh  yaml2.cc  yaml2.hh
debian/: README.debian  changelog  control  copyright  deb.am  install  postinst  rules  service  underpass.config  underpass.templates
doc/: Doxyfile  Doxyfile.in  Makefile.am  changefile.md  chroots.md  coding.md  data-quality-workflow.md  dataflow.dia  dataflow.md  development.md  engine.md  getting-started.md  install.md  mainpage.md  replication.md  replicator.md  schemas.md  statistics.md  stats-test.md  statstics.md  updating.md  utility.md  validation.md
docker/: README.md  build-and-test.sh  bzip2.pc  ci-entrypoint.sh  docker-compose.yml  install-with-docker.sh  install.sh  services-start.sh  services-stop.sh  underpass-api.dockerfile  underpass-build-deps.dockerfile  underpass-config.yaml  underpass-ui.dockerfile  underpass.dockerfile
docs/: Doxyfile  Doxyfile.in  Makefile.am  bootstrapsh.md  data-quality-workflow.md  dataflow.dia  dataflow.md  development.md  getting-started.md  index.md  install-docker.md  install.md  mkdocs.yml  osmstats.md  python-rest-api.md  replication.md  replicator.md  statistics.md  ui-components.md  updating.md  utility.md  validation.md
example/: dbapi  export.py  main.py  report.py  validation.py
galaxy/: changeset.cc  changeset.hh  galaxy.cc  galaxy.hh  osmchange.cc  osmchange.hh  planetreplicator.cc  planetreplicator.hh  planetreplicator.yaml  replication.cc  replication.hh  replicator.cc  replicator.hh
hottm/: tmdefs.hh  tmprojects.cc  tmprojects.hh  tmteams.cc  tmteams.hh  tmusers.cc  tmusers.hh
infra/: LICENSE.txt  README.md  TODO  ami_lookup.tf  api.tf  backend.tf  bootstrap.sh  bootstrap.tpl  config.txt.tftpl  config.txt.tpl  database.tf  galaxy-api.tf  infra.tf  main.tf  output.tf  provider.tf  variables.tf
js/: cosmos.config.json  package-lock.json  package.json
m4/: ax_boost_timer.m4  ax_python_devel.m4  bzip2.pc
osmstats/: changefile.cc  changefile.hh  changeset.cc  changeset.hh  geoutil.cc  geoutil.hh  osmchange.cc  osmchange.hh  osmstats.cc  osmstats.hh  replication.cc  replication.hh
po/: Makefile.am  en.po  en_US.po
raw/: Manual.md  README.md  Readme.md  Run.md  app_config sample.json  app_config_sample.json  basic_indexes.sql  boundaries.sql  config.txt.sample  country_update  country_update.py  db_config.txt.sample  field_update  geo_indexes.sql  grid.geojson  grid_update  grid_update.py  raw.lua  raw.sql  rawdata-replication  rawdata-replication_asia  replication  requirements.txt  run.py
redhat/: rpm.am  underpass.spec.in
search/: search_index.json
setup/: bootstrap.sh  galaxy.sql  install-macos-arm64.sh  install-macos.sh  install.sh  setupdb.sh  underpass.sql
src/: dsodefs.hh  gettext.h  unconfig.h  underpass.cc  underpassconfig.hh
src/testsuite/libunderpass.all/: Makefile  Makefile.am  areafilter-test.cc  change-test.cc  geo-test.cc  hashtags-test.cc  hotosm-test.cc  locale-test.osm  planetreplicator-test.cc  pq-test.cc  raw-test.cc  replication-test.cc  site.exp  stats-test.cc  statsconfig-test.cc  test-playground.cc  under-test.cc  underpass.sum  underpass.xml  val-test.cc  val-unsquared-test.cc  yaml-test.cc
src/validate/: Makefile  Makefile.am  defaultvalidation.cc  defaultvalidation.hh  geospatial.cc  geospatial.hh  hotosm.cc  hotosm.hh  queryvalidate.cc  queryvalidate.hh  semantic.cc  semantic.hh  validate.hh
testsuite/: Makefile.am
testsuite/hotosm/: 123.osc  Makefile.am  change-test.cc  geo-test.cc  hotosm-test.cc  rep-test.cc  stats-test.cc  tm-test.cc  under-test.cc  val-test.cc
testsuite/libunderpass.all/: 993.state.txt  Makefile.am  areafilter-test.cc  change-test.cc  conflate-test.cc  geo-test.cc  hashtags-test.cc  hotosm-test.cc  osm2pgsql-test.cc  planetreplicator-test.cc  pq-test.cc  rect.osc  rep-test.cc  replication-test.cc  stats-test.cc  statsconfig-test.cc  test-playground.cc  test.yaml  tm-test.cc  under-test.cc  underpass.exp  usersync-test.cc  val-test.cc  yaml-test.cc
util/: README  features2yaml.py  insights.py  raw_with_ref.lua  requirements.txt  stats-test.json  stats2galaxy.py  training.py  underpass-config-sample.yaml  underpassmon.py  webapi.py  xls2yaml.py
utils/: bootstrap.sh  clean-osmchanges.sql  features2yaml.py  poly2geojson.py  randombuildingcentroid.sql  raw-underpass.lua  raw-underpass.sql  raw.lua  raw_with_ref.lua  setupdb.sh  underpassmon.py  xls2yaml.py
validate/: Makefile.am  amenity.yaml  building.yaml  buildings.yaml  conflate.cc  conflate.hh  highway.yaml  hotosm.cc  hotosm.hh  landuse.yaml  natural.yaml  place.yaml  statistics.yaml  validate.cc  validate.hh  wastepoints.yaml  waterway.yaml
(+273 files in other folders)
